popup/popup.css
@font-face {
    font-family: "Beachday";
    src:
        local("Beachday"),
        url("../assets/beachday/beachday.otf") format("opentype"),
        url("../assets/beachday/beachday.ttf") format("truetype");
    font-weight: normal;
    font-size: normal;
}
:root {
    --bg-dark: hsl(0 0 0);
    --bg: hsl(0 0 5);
    --bg-light: hsl(0 0 14);
    --text: hsl(0 0 91);
    --text-muted: hsl(0 0 66);
    --primary-color: #d79b16;
    --button-hover: all 0.4s ease;
}
:root.light {
    --bg-dark: hsl(0 0 90);
    --bg: hsl(0 0 95);
    --bg-light: hsl(0 0 100);
    --text: hsl(0 0 5);
    --text-muted: hsl(0 0 30);
    --primary-color: #d79b16;
}
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
html,
body {
    width: 600px;
    height: 600px;
    overflow: hidden;
}
html {
    font-size: 18px;
}
body {
    background-color: var(--bg-dark);
    display: flex;
    flex-direction: column;
    gap: 0.1rem;
}
/* --- Header --- */
nav {
    padding: 0.4rem 0.7rem 0.2rem 0.6rem;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
.logo {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 0.5rem;
}
.logo img {
    width: 2.5rem;
}
.logo-text {
    font-family: Beachday;
    font-size: 1.3rem;
    color: var(--primary-color);
}
.settings {
    padding-right: 0.3rem;
    gap: 0.7rem;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}
.settings button {
    background-color: transparent;
    border: none;
    border-radius: 50%;
    padding: 0.3rem;
    width: 2.3rem;
    height: 2.3rem;
    cursor: pointer;
    transition: var(--button-hover);
}
.settings button i {
    color: var(--text);
    font-size: 1.2rem;
}
.settings button:hover {
    background-color: var(--bg-light);
}
/* --- main --- */
main {
    display: flex;
    flex-direction: column;
    gap: 0.8rem;
}
.main-expanded {
    gap: 0rem;
}
/* --- stats --- */
.content-stats {
    max-height: 13rem;
    padding: 0rem 1.1rem 0rem 1.1rem;
    gap: 0.8rem;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-areas:
        "prompt-number favorite-number"
        "export-status export-status";
    overflow: hidden;
    transition: max-height 0.35s ease;
}
.hidden {
    max-height: 0;
    padding: 0 1.1rem 0 1.1rem;
}
.prompt-number,
.favorite-number,
.export-status {
    border: 2px solid var(--bg-light);
    border-radius: 10px;
    padding-right: 1.8rem;
    padding-left: 1.8rem;
}
.prompt-number h1,
.favorite-number h1,
.export-status h1 {
    color: var(--text);
    font-size: 1.5rem;
    padding-bottom: 0.4rem;
}
.prompt-number h2,
.favorite-number h2,
.export-status h2 {
    font-size: 1.1rem;
    color: var(--text);
    padding-bottom: 0.3rem;
}
.prompt-number p,
.favorite-number p,
.export-status p {
    font-size: 0.7rem;
    color: var(--text-muted);
}
.prompt-number {
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: center;
    background-color: var(--bg);
    grid-area: prompt-number;
    height: 7rem;
}
.favorite-number {
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: center;
    background-color: var(--bg);
    grid-area: favorite-number;
    height: 7rem;
}
.export-status {
    background-color: var(--bg);
    grid-area: export-status;
    height: 4.6rem;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}
/* --- content --- */
.content {
    padding: 0rem 1.1rem 0 1.1rem;
    display: flex;
    flex-direction: column;
    gap: 0.8rem;
}
/* --- filters & actions --- */
.filters {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}
.search-box {
    background-color: var(--bg);
    width: 16rem;
    height: 2.3rem;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    gap: 5px;
    padding: 0;
    border-radius: 10px;
}
.search-box input {
    background-color: var(--bg);
    width: 100%;
    height: 100%;
    border: none;
    border-radius: 10px;
    color: var(--text-muted);
    font-size: 0.8rem;
}
.search-box input:focus {
    outline: none;
}
.search-box i {
    padding-right: 0.6rem;
    padding-left: 0.9rem;
    width: 2rem;
    font-size: 0.8rem;
    height: 100%;
    color: var(--text-muted);
    display: flex;
    align-items: center;
    justify-content: center;
}
.actions {
    display: flex;
    flex-direction: row;
    justify-content: start;
    align-items: center;
    width: 17.1rem;
    height: 2.3rem;
    gap: 0.8rem;
}
.favorite-filter {
    appearance: none;
    -webkit-appearance: none;
    width: 8.5rem;
    height: 2.3rem;
    background-color: var(--bg);
    color: var(--text);
    font-size: 0.8rem;
    border: none;
    border-radius: 10px;
    padding-left: 1.8rem;
    padding-right: 1.8rem;
    position: relative;
    cursor: pointer;
    background-repeat: no-repeat;
    background-image:
        linear-gradient(45deg, transparent 50%, currentColor 50%),
        linear-gradient(135deg, currentColor 50%, transparent 50%);
    background-position:
        right 30px top 1.3em,
        right 25px top 1.3em;
    background-size:
        5px 5px,
        5px 5px;
}
.favorite-filter:focus {
    outline: none;
}
.add-button,
.backup-button {
    background-color: var(--bg);
    border: none;
    padding: 0.3rem;
    width: 2.5rem;
    height: 2.5rem;
    cursor: pointer;
    transition: var(--button-hover);
}
.add-button {
    border-radius: 50%;
}
.backup-button {
    border-radius: 10px;
}
.add-button i,
.backup-button i {
    color: var(--text);
    font-size: 0.8rem;
}
.add-button:hover,
.backup-button:hover {
    background-color: var(--bg-light);
}
/* --- prompts --- */
.prompts {
    height: 13rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    overflow: auto;
    scrollbar-width: none;
}
.prompts-expanded {
    height: 26rem;
}
.prompts:-webkit-scrollbar {
    display: none;
}
.prompt-card {
    background-color: var(--bg);
    padding: 0.8rem 1.1rem 0.8rem 1.1rem;
    height: 13rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: start;
    gap: 0.7rem;
    border-radius: 10px;
}
.prompt-card h3 {
    width: 100%;
    text-align: end;
    color: var(--text-muted);
    font-weight: 300;
    font-size: 0.7rem;
}
.prompt-card h1 {
    width: 100%;
    color: var(--text);
    font-size: 1.1rem;
}
.prompt-card p {
    width: 100%;
    color: var(--text-muted);
    font-size: 0.7rem;
    padding-bottom: 0.5rem;
}
.card-buttons {
    display: flex;
    flex-direction: row;
    width: 100%;
    justify-content: space-between;
    align-items: center;
}
.use-button {
    height: 1.7rem;
    width: 6rem;
    border: 1px solid var(--primary-color);
    background-color: transparent;
    color: var(--primary-color);
    border-radius: 5px;
    font-weight: 700;
    transition: var(--button-hover);
    cursor: pointer;
}
.use-button:hover {
    background-color: var(--primary-color);
    color: var(--bg);
}
.actions {
    display: flex;
    flex-direction: row;
    justify-content: end;
    align-items: center;
}
.edit-button,
.delete-button,
.favorite-button {
    background-color: var(--bg-light);
    color: var(--text);
    border: none;
    padding: 0.4rem;
    cursor: pointer;
    border-radius: 10px;
    transition: var(--button-hover);
}
.edit-button:hover,
.delete-button:hover,
.favorite-button:hover {
    background-color: var(--text-muted);
    color: var(--bg);
}

